--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <title>Humane Strategia</title>
 </head>
 <body>
-  <h1>Le site fonctionne</h1>
-  <p>Déploiement réussi.</p>
+  <h1>Humane Strategia</h1>
+<p>
+Cabinet de conseil stratégique.
+<br>
+Vision, structuration et déploiement.
+</p>
 </body>
 </html>
