--- a/index.html
+++ b/index.html
@@ -1,15 +1,1 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <title>Humane Strategia</title>
-</head>
-<body>
-  <h1>Humane Strategia</h1>
-<p>
-Cabinet de conseil stratégique.
-<br>
-Vision, structuration et déploiement.
-</p>
-</body>
-</html>
+FICHIER : /humane-strategia-site/index.html
