Restore full index.html homepage

--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-FICHIER : /humane-strategia-site/index.html
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>Humane Strategia — Site institutionnel</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/svg+xml" href="assets/favicon.svg">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <header class="site-header">
+    <div class="container header-inner">
+      <a href="index.html" class="site-logo">
+        <img src="assets/logo-humane-strategia.svg" alt="Humane Strategia">
+      </a>
+      <nav class="site-nav">
+        <ul>
+          <li><a href="role-responsabilite.html">Rôle &amp; Responsabilité</a></li>
+          <li><a href="faq.html">FAQ</a></li>
+          <li><a href="mentions-legales.html">Mentions légales</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main class="site-main">
+    <section class="hero">
+      <div class="container">
+        <h1>Cadres de continuité et coordination documentaire</h1>
+        <p>
+          Humane Strategia conçoit et formalise des cadres de continuité destinés à clarifier
+          les rôles, les périmètres et les décisions entre les parties prenantes.
+        </p>
+      </div>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container footer-inner">
+      <p>Humane Strategia — Ingénierie, AMO et coordination de cadres de continuité</p>
+      <p><a href="mentions-legales.html">Mentions légales</a></p>
+    </div>
+  </footer>
+</body>
+</html>
